quickfix: alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.weather {
+  text-align: center;
+}
+
 .card {
   display: inline-block;
   width: 200px;
@@ -37,6 +41,10 @@
 
 .text-right {
   text-align: right;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .title {
